--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -3,8 +3,8 @@
   <div ng-hide="ctrl.subject" translate>Not defined</div>
 </div>
   <div class="model-view__sub">
-    <non-editable title="Id" value="ctrl.subject.id.uri" link="ctrl.subject.id.url"></non-editable>
-    <non-editable title="Label" value="ctrl.subject.label"></non-editable>
-    <non-editable title="Definition" value="ctrl.subject.comment"></non-editable>
+    <non-editable data-title="Concept id" value="ctrl.subject.id.uri" link="ctrl.subject.id.url"></non-editable>
+    <non-editable data-title="Concept label" value="ctrl.subject.label"></non-editable>
+    <non-editable data-title="Definition" value="ctrl.subject.comment"></non-editable>
   </div>
 </div>
