--- a/src/components/editor/definedBy.html
+++ b/src/components/editor/definedBy.html
@@ -1,1 +1,1 @@
-<non-editable title="{{ctrl.definedByTitle}}" value="ctrl.entity.definedBy.label" link="ctrl.model.linkTo(ctrl.entity)"></non-editable>
+<non-editable data-title="{{ctrl.definedByTitle | capitalize}}" value="ctrl.entity.definedBy.label" link="ctrl.model.linkTo(ctrl.entity)"></non-editable>
