--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -2,18 +2,18 @@
 
   <h4>{{ctrl.model.normalizedType + ' information' | capitalize | translate}}</h4>
 
-  <editable title="{{ctrl.model.normalizedType + ' label' | capitalize}}">
+  <editable data-title="{{ctrl.model.normalizedType + ' label' | capitalize}}">
     <input id="modelLabel" class="form-control" type="text" localized-input="modelLabel" ng-model="ctrl.model.label" />
   </editable>
 
-  <non-editable title="Namespace" value="ctrl.model.namespace"></non-editable>
-  <non-editable title="Prefix" value="ctrl.model.prefix"></non-editable>
+  <non-editable data-title="Namespace" value="ctrl.model.namespace"></non-editable>
+  <non-editable data-title="Prefix" value="ctrl.model.prefix"></non-editable>
 
-  <editable title="Description">
+  <editable data-title="Description">
     <textarea id="modelComment" class="form-control" localized-input ng-model="ctrl.model.comment"></textarea>
   </editable>
 
-  <editable title="State" value-as-localization-key="true" ng-if="!ctrl.model.unsaved">
+  <editable data-title="State" value-as-localization-key="true" ng-if="!ctrl.model.unsaved">
     <state-select id="modelState" state="ctrl.model.state" model="ctrl.model"></state-select>
   </editable>
 
