--- a/src/components/model/referencesView.html
+++ b/src/components/model/referencesView.html
@@ -8,6 +8,6 @@
       <span accordion-chevron is-open="ctrl.opened[reference.id]">{{reference | translateLabel}}</span>
     </uib-accordion-heading>
     <button ng-show="modelViewController.canModify() && !reference.isLocal()" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
-    <non-editable title="Id" value="reference.vocabularyId"></non-editable>
+    <non-editable data-title="Vocabulary id" value="reference.vocabularyId"></non-editable>
   </uib-accordion-group>
 </uib-accordion>
