--- a/src/components/editor/editableMultipleUriSelect.html
+++ b/src/components/editor/editableMultipleUriSelect.html
@@ -1,5 +1,6 @@
 <div class="editable-wrap form-group">
-  <label for="{{ctrl.id}}" ng-show="ctrl.title && (ctrl.items.length > 0 || ctrl.isEditing())">{{ctrl.title | translate}}</label>
+
+  <editable-label input-id="ctrl.id" ng-show="ctrl.title && (ctrl.items.length > 0 || ctrl.isEditing())" data-title="ctrl.title"></editable-label>
 
   <span ng-show="!ctrl.isEditing()" ng-repeat="item in ctrl.items">
     <span ng-show="item.showPlain">{{item.displayValue}}<span ng-if="!$last">, </span></span>
