--- a/src/components/editor/subjectView.html
+++ b/src/components/editor/subjectView.html
@@ -1,5 +1,5 @@
 <div class="editable-wrap">
-  <label>{{(ctrl.title || 'Subject') | translate}}</label>
+  <editable-label data-title="ctrl.subjectTitle"></editable-label>
   <div ng-hide="ctrl.subject" translate>Not defined</div>
 </div>
   <div class="model-view__sub">
