--- a/src/components/form/editable.html
+++ b/src/components/form/editable.html
@@ -1,5 +1,5 @@
 <div class="editable-wrap form-group">
-  <label for="{{ctrl.inputId}}" ng-show="ctrl.item.displayValue || ctrl.isEditing()">{{ctrl.title | translate}} <span ng-show="ctrl.required && ctrl.isEditing()" style="color: red">*</span></label>
+  <editable-label data-title="ctrl.title" input-id="ctrl.inputId" ng-show="ctrl.item.displayValue || ctrl.isEditing()" required="ctrl.required"></editable-label>
   <div ng-show="ctrl.isEditing()" ng-transclude></div>
 
   <div ng-if="!ctrl.isEditing()">
