Use track by where possible

--- a/src/components/common/export.html
+++ b/src/components/common/export.html
@@ -2,9 +2,9 @@
   <button class="btn btn-default" uib-dropdown-toggle>{{'Export' | translate}} <span class="caret"></span></button>
   <ul class="dropdown-menu" role="menu">
     <li role="menuitem" class="dropdown-header" translate>Show</li>
-    <li role="menuitem" ng-repeat="download in ctrl.downloads"><a target="_blank" ng-href="{{download.hrefRaw}}">{{download.name | translate}}</a></li>
+    <li role="menuitem" ng-repeat="download in ctrl.downloads track by download.name"><a target="_blank" ng-href="{{download.hrefRaw}}">{{download.name | translate}}</a></li>
     <li role="separator" class="divider"></li>
     <li role="menuitem" class="dropdown-header" translate>Download</li>
-    <li role="menuitem" ng-repeat="download in ctrl.downloads"><a download="{{download.filename}}" ng-href="{{download.href}}">{{download.name | translate}}</a></li>
+    <li role="menuitem" ng-repeat="download in ctrl.downloads track by download.name"><a download="{{download.filename}}" ng-href="{{download.href}}">{{download.name | translate}}</a></li>
   </ul>
 </div>
