--- a/src/components/common/searchResults.html
+++ b/src/components/common/searchResults.html
@@ -1,4 +1,4 @@
-<div ng-repeat="searchResult in ctrl.searchResults"
+<div ng-repeat="searchResult in ctrl.searchResults track by ctrl.trackingFn(searchResult)"
      ng-class="['search-result', {selected: ctrl.isSelected(searchResult), disabled: searchResult.disabled, 'add-new': searchResult.isAddNew()}]"
      data-title="{{ctrl.title(searchResult)}}"
      ng-click="ctrl.selectItem(searchResult)"
