--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -35,11 +35,11 @@
   <h4>{{ctrl.class.normalizedType + ' properties' | capitalize | translate}}</h4>
 
   <uib-accordion close-others="true">
-    <uib-accordion-group ng-repeat="property in ctrl.class.properties  | orderBy:'index'" is-open="ctrl.propertyViews[property.internalId].isOpen">
+    <uib-accordion-group ng-repeat="property in ctrl.class.properties | orderBy: 'index' track by property.internalId.value" is-open="ctrl.propertyViews[property.internalId.uri].isOpen">
       <uib-accordion-heading>
         <span ng-class="property.glyphIconClass"></span>
         <span>{{property | translateLabel}}</span>
-        <accordion-chevron is-open="ctrl.propertyViews[property.internalId].isOpen"></accordion-chevron>
+        <accordion-chevron is-open="ctrl.propertyViews[property.internalId.uri].isOpen"></accordion-chevron>
         <div class="property-ordering" ng-show="ctrl.isEditing()">
         <span ng-show="!$first"
               class="glyphicon glyphicon-chevron-up"
