--- a/src/components/editor/editableMultipleUriSelect.html
+++ b/src/components/editor/editableMultipleUriSelect.html
@@ -2,14 +2,14 @@
 
   <editable-label input-id="ctrl.id" ng-show="ctrl.title && (ctrl.items.length > 0 || ctrl.isEditing())" data-title="ctrl.title"></editable-label>
 
-  <span ng-show="!ctrl.isEditing()" ng-repeat="item in ctrl.items">
+  <span ng-show="!ctrl.isEditing()" ng-repeat="item in ctrl.items track by item.value()">
     <span ng-show="item.showPlain">{{item.displayValue}}<span ng-if="!$last">, </span></span>
     <a ng-show="item.showLink" ng-href="{{item.href}}">{{item.displayValue}}<span ng-if="!$last">, </span></a>
   </span>
 
   <div ng-show="ctrl.isEditing()">
       <div class="form-control multi-input">
-        <div ng-repeat="item in ctrl.items" class="added-item">
+        <div ng-repeat="item in ctrl.items track by item.value()" class="added-item">
           {{item.displayValue}}
           <div class="delete-item badge" ng-click="ctrl.deleteUri(item)">&times;</div>
         </div>
