--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -14,7 +14,7 @@
           <button ng-show="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-new-button" ng-click="tab.addNew()">{{tab.addLabel | translate}}</button>
 
           <ul class="panel__list" ng-class="{'has-button': ctrl.canEdit()}">
-            <li ng-repeat="item in tab.items()"
+            <li ng-repeat="item in tab.items() track by item.id.value"
                 ng-class="{'model-panel__selection': ctrl.isSelected(item)}"
                 ng-click="ctrl.select(item)">
               {{item.label}} <ajax-loading-indicator-small ng-if="ctrl.isLoading(item)"></ajax-loading-indicator-small>
