Fix performance problem with classes with lots of properties
Closes #359

--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-if="ctrl.isOpen">
   <button ng-show="editableController.canModify()"
           type="button"
           class="btn btn-default pull-right"
