Label is required for a related resource

--- a/src/components/model/addRelationModal.html
+++ b/src/components/model/addRelationModal.html
@@ -8,7 +8,7 @@
       </editable>
 
       <editable data-title="Title">
-        <input class="form-control" type="text" string-input="label" ng-model="ctrl.title"/>
+        <input class="form-control" type="text" required string-input="label" ng-model="ctrl.title"/>
       </editable>
 
       <editable data-title="Description">
